syntax = "proto3";
package message;

service Message { rpc SendMessage(SyftMessage) returns (SyftMessage); }

message SyftMessage {
  oneof Id {
    bool id_null = 100;
    string local_id = 101;
    string remote = 102;
  }

  string capability = 201;

  repeated string args = 300;
  map<string, string> kwargs = 400;
  bytes obj = 501;
}
